--- a/package.json
+++ b/package.json
@@ -19,16 +19,18 @@
     "babel-preset-stage-0": "^6.16.0",
     "bootstrap": "^3.3.7",
     "flux": "^3.1.0",
+    "history": "^4.4.1",
     "jquery": "^1.11.2",
     "react": "^15.4.1",
     "react-bootstrap": "^0.30.7",
     "react-dom": "^15.4.1",
     "react-dynamic-number": "^1.4.4",
+    "react-router": "^3.0.0",
     "webpack": "^1.13.3",
     "webpack-dev-server": "^1.16.2"
   },
   "scripts": {
-    "build": "webpack-dev-server --content-base src --inline --hot",
-    "webpack": "webpack"
+    "dev": "webpack-dev-server --content-base src --inline --hot",
+    "prod": "NODE_ENV=production webpack"
   }
 }
