--- a/package.json
+++ b/package.json
@@ -20,11 +20,11 @@
     "bootstrap": "^3.3.7",
     "flux": "^3.1.0",
     "history": "^4.4.1",
-    "jquery": "^1.11.2",
     "react": "^15.4.1",
     "react-bootstrap": "^0.30.7",
     "react-dom": "^15.4.1",
     "react-router": "^3.0.0",
+    "superagent": "^3.1.0",
     "webpack": "^1.13.3",
     "webpack-dev-server": "^1.16.2"
   },
